# aliby

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  abc.py  alibylite.org  compiler.py  config.json  docker-compose.yml  environment.yml  flake.nix  flake.nix.bak  grouper.py  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: duplicate-code-detection.yml  duplicate-code.yml  tests.yml
.gitlab/issue_templates/: bug.md
agora/: abc.py
aliby/: baby_client.py  experiment.py  grouper.py  pipeline.py  segment.py  timelapse.py
aliby/io/: dataset.py  image.py  metadata_parser.py  omero.py
aliby/tile/: tiler.py  traps.py
aliby/utils/: imageViewer.py
core/: __init__.py  abc.py  baby_client.py  base.py  cell.py  cells.py  connect.py  experiment.py  extract.py  group.py  grouper.py  haystack.py  merger.py  omero.py  parameters.py  picker.py  pipeline.py  post_processing.py  postprocessor.py  processor.py  results.py  segment.py  timelapse.py  traps.py  utils.py
core/functions/: test_hdf.py  tracks.py
core/io/: base.py  hdf5.py  matlab.py  metadata_parser.py  omero.py  signal.py  writer.py
core/multisignal/: aggregate.py  align.py  crosscorr.py  mi.py
core/processes/: aggregate.py  autoreg.py  base.py  births.py  catch22.py  detrend.py  dsignal.py  fft.py  findpeaks.py  gaussianprocess.py  gpsignal.py  knngraph.py  leiden.py  lineageprocess.py  merger.py  mi.py  peaks.py  picker.py  savgol.py  template.py
core/tests/: test_integration.py  test_units.py
core/trap_templates/: trap_bg_1.npy  trap_bm_2.npy
database/: records.py
doc/: matlab.md
docs/: CONTRIBUTING.md  README.md  matlab.md  requirements.txt
docs/source/: INSTALL.md  PIPELINE.md  api.rst  conf.py  index.rst
examples/: 01_cell_painting_tiff.py  02_zarr_deep_embeddings.py  03_yeast_timelapse_baby.py  README.md  basic_cellpose_cpmeasure_monozarr.py  basic_processes.py  cExperiment_log_001.txt  deep_learning.py  deep_learning_dinov2.py  group.py  run_custom_function.py  run_ecoli.py  run_jura.py  run_local.py  run_new.py  run_remote.py  run_tiff.py  run_tiff_no_logs.py  run_zarr.py  signals.py  testing.py
examples/extraction/: pos_example.py
examples/logfile_parser/: example_multiDGUI_acq.txt  example_multiDGUI_log.txt
examples/tiler/: pypipeline_unit_test_00_000001_Brightfield_003.tif
extraction/core/: extractor.py
extraction/examples/: argo.py  (+2 more)
io/: bridge.py  cells.py  metadata.py  reader.py  signal.py  utils.py  writer.py
notebooks/: nb01_data_loading.py  nb02_cellpose_pipeline.py  nb03_deep_learning.py
omero_py/: __init__.py
pcore/: baby_client.py  cells.py  experiment.py  grouper.py  haystack.py  multiexperiment.py  pipeline.py  segment.py  timelapse.py  traps.py
routines/: boxplot.py  heatmap.py  histogram.py  mean_plot.py  median_plot.py  plottingabc.py  single_birth_plot.py  single_plot.py
scripts/: 01_extract_profiles.py  argo_example.py  check_aggregated_metrics.py  check_ntraps_example.py  create_experiment.py  debug.py  dev_lineage.py  dis_alan.bak  distributed.py  distributed_alan.py  explore_h5.py  explore_outlines.py  folding_test.py  get_expt_metadata.py  group.py  group2.py  h5py_storage.py  improve_tiler.py  lbl_mask_bug.py  load_test_experiments.py  local_test.py  pipeline_test.py  pipeline_test_metawriter.py  post_process.py  postprocess.py  postprocess_folder.py  run.py  run_default.py  run_pipeline.py  template.npy  test_postprocess.py  timing_plots.py  tracking_time_performance_test.py
test/: connect_to_omero.py  create_experiment.py  create_local_expt.py  test_baby_client.py  test_connections.py  test_local_expt.py  test_pipeline.py  test_post_processing.py  test_sqlalchemy.py
tests/: common.py  conftest.py  connect_to_omero.py  readme.org  test_basic_pipeline_monozarr.py  test_cellpose_cpmeasure_minimal.py  test_dataset.py  test_examples_with_fixture.py  test_imageset.py  test_monozarr.py  test_nahual_embed_minimal.py  test_pipeline.py  test_process_traps.py  test_regression.py  test_segment.py  test_tiler.py  test_traps.py  test_zarr_io.py
utils/: imageViewer.py
(+161 files in other folders)
