[tool.poetry]
name = "alibylite"
version = "0.0.2"
description = "Process and analyse live-cell imaging data"
authors = ["Alan Munoz", "Peter Swain <peter.swain@ed.ac.uk>"]
packages = [
    { include = "aliby", from="src" },
    { include = "extraction", from="src" },
    { include = "agora", from="src" },
    { include = "postprocessor", from="src" },
    { include = "logfile_parser", from="src" },
]
readme = "README.md"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
numpy = "<2.0"
pandas = "^2.2.3"
scikit-image = "^0.25.2"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"

bottleneck = "^1.4.2"
dask = "^2025.2.0"
flatten-dict = "^0.4.2"
h5py = "^3.13.0"
pathos = "^0.3.3"
tqdm = "^4.67.1"
xmltodict = "^0.14.2"
zarr = "^3.0.3"


[tool.poetry.group.omero]
optional = true
[tool.poetry.group.omero.dependencies]
omero-py = ">=5.19.1"


[tool.poetry.group.baby]
optional = true
[tool.poetry.group.baby.dependencies]
tensorflow = ">2.0,<=2.14"
baby-seg = ">=0.30.7"


[tool.black]
line-length = 79
