[project]
name = "aliby"
version = "0.2.0"
description = "Process and analyse live-cell imaging data"
authors = [
    { name = "Alan Munoz" },
    { name = "Peter Swain", email = "peter.swain@ed.ac.uk" },
]
requires-python = ">=3.9, <3.11"
readme = "README.md"
dependencies = [
    "numpy<2",
    "scikit-learn>=1.0.2, <1.3",
    "scipy>=1.7.3",
    "scikit-image>=0.18.1",
    "dask>=2021.12.0",
    "zarr>=2.14.0",
    "pyarrow>=19.0.1",
    "cp-measure>=0.1.7,<0.2",
    "pooch>=1.8.2,<2",
]

[project.optional-dependencies]
cellpose = ["cellpose>=3.1.1.1"]

[dependency-groups]
cellpose = [
    "cellpose>=3.1.1.1",
]
dev = [
    "jupyter>=1.0.0,<2",
    "jupytext>=1.15.2,<2",
    "ruff>=0.3.2",
    "ruff-lsp>=0.0.52",
]
examples = [
    "pooch>=1.8.2",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/aliby",
    "src/extraction",
    "src/agora",
    "src/postprocessor",
    "src/logfile_parser",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/aliby",
    "src/extraction",
    "src/agora",
    "src/postprocessor",
    "src/logfile_parser",
]

[tool.hatch.build.targets.wheel.sources]
"src/aliby" = "aliby"
"src/extraction" = "extraction"
"src/agora" = "agora"
"src/postprocessor" = "postprocessor"
"src/logfile_parser" = "logfile_parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
