[tool.poetry]
name = "alibylite"
version = "0.24"
description = "Process and analyse live-cell imaging data"
authors = ["Alan Munoz", "Peter Swain <peter.swain@ed.ac.uk>"]
packages = [
    { include = "aliby", from="src" },
    { include = "extraction", from="src" },
    { include = "agora", from="src" },
    { include = "postprocessor", from="src" },
    { include = "logfile_parser", from="src" },
]
readme = "README.md"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
numpy = ">=2.0"
pandas = ">=2"
tables = ">=3.11.1"
scikit-image = "*"
scikit-learn = "*"
scipy = "*"

bottleneck = "*"
dask = "*"
flatten-dict = "*"
h5py = "*"
tqdm = "*"
xmltodict = "*"
zarr = ">=3"


[tool.poetry.group.omero]
optional = true
[tool.poetry.group.omero.dependencies]
omero-py = ">=5.20.0"


[tool.poetry.group.baby]
optional = true
[tool.poetry.group.baby.dependencies]
baby-seg = { path = "../../datasync/wip/bairn", develop = true }


[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: full pipeline integration test (run with --run-slow)",
]

[tool.black]
line-length = 79
